test/correct/PMC7.hs
module PMC7 where

main :: Int
main = 0

f :: [a] -> Int
f xs = l 
    where l :: Int
          l = length xs
