test/typeerrors/Examples/PatListResult.hs
module PatListResult where

f :: Bool -> Int
f [a] = 13
